font size change

--- a/register.css
+++ b/register.css
@@ -36,6 +36,7 @@ label {
   padding-top: 15px;
   padding-left: 3px;
   padding-bottom: 4px;
+  font-size: 1.2em;
   background: transparent;
   border: none;
   outline: none;
