--- a/register.css
+++ b/register.css
@@ -12,7 +12,6 @@ form {
   margin: 60px auto;
   background: #efefef;
   padding: 60px 120px 80px 120px;
-  text-align: center;
   -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
   box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
 }
@@ -41,14 +40,12 @@ label {
   border: none;
   outline: none;
 }
-
 .line-box {
   position: relative;
   width: 100%;
   height: 2px;
   background: #BCBCBC;
 }
-
 .line {
   position: absolute;
   width: 0%;
@@ -59,16 +56,29 @@ label {
   background: #555555;
   transition: ease .6s;
 }
-
 .input:focus + .line-box .line {
   width: 100%;
 }
-
 .label-active {
   top: -3em;
 }
-
-button {
+.attach_btn {
+  display: inline-block;
+  padding: 6px 12px;
+  background: rgb(220,220,220);
+  font-weight: bold;
+  color: rgb(120,120,120);
+  border: none;
+  outline: none;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: ease .3s;
+  font-size: .8em;
+}
+.attach {
+  padding-top: 20px;
+}
+.submit_btn {
   display: inline-block;
   padding: 12px 24px;
   background: rgb(220,220,220);
@@ -79,9 +89,15 @@ button {
   border-radius: 3px;
   cursor: pointer;
   transition: ease .3s;
+  font-size: 1em;
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-
-button:hover {
+.submit_btn:hover {
   background: #555555;
   color: #ffffff;
 }
+
