--- a/landing_page.css
+++ b/landing_page.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Cover Photo */
-#hero {
+.hero {
   width: 100%;
   height: 100vh;
   background: url(img/landing.jpg) top center;
@@ -39,8 +39,9 @@ h1, h2, h3, h4, h5, h6 {
 .nav.navbar-nav.navbar-right li a {
     color: white;
 }
-#hero .hero-container {
-  position: absolute;
+.hero .hero-container {
+/*  position: absolute;*/
+  padding-top: 28%;
   bottom: 0;
   top: 0;
   left: 0;
@@ -52,7 +53,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   color: white;
 }
-#hero h1 {
+.hero h1 {
   margin: 30px 0 10px 0;
   font-size: 48px;
   font-weight: 700;
@@ -60,12 +61,12 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   color: #fff;
 }
-#hero h2 {
+.hero h2 {
   color: #eee;
   margin-bottom: 50px;
   font-size: 24px;
 }
-#hero .btn-register {
+.hero .btn-register {
   font-family: "Poppins", sans-serif;
   text-transform: uppercase;
   font-weight: 500;
@@ -79,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid #fff;
   color: #fff;
 }
-#hero .btn-register:hover {
+.hero .btn-register:hover {
   background: #ccc;
   text-decoration: none;
 }
