--- a/register.css
+++ b/register.css
@@ -24,7 +24,7 @@ label {
   position: absolute;
   top: -1.6em;
   padding: 0px;
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: .8em;
   letter-spacing: 1px;
   color: rgb(120,120,120);
